fix: Correct low contrast issues flagged by Chrome Lighthouse

--- a/blog.css
+++ b/blog.css
@@ -57,7 +57,7 @@ h6, .h6 {
 
 /* Active state gets a caret at the bottom */
 .blog-nav .active {
-  color: color: rgb(78, 78, 78);
+  color: rgb(78, 78, 78);
 }
 .blog-nav .active:after {
   position: absolute;
